# Panopticon-M365

./: .gitignore  Cargo.toml
examples/: run_query.rs
src/: endpoint.rs  lib.rs  resource.rs
src/_types/azure/: common.rs  log_analytics.rs  mod.rs
src/apis/: auth.rs  mod.rs
src/apis/azure_monitor/: mod.rs
src/apis/log_analytics/: metadata.rs  mod.rs  query.rs
src/apis/resource_manager/: mod.rs  resource_groups.rs  subscriptions.rs  workspaces.rs
src/apis/sentinel/: incidents.rs  mod.rs  watchlist_items.rs  watchlists.rs
src/auth/: extension.rs  mod.rs
src/azure/: common.rs  log_analytics.rs  mod.rs
src/azure/log_analytics/: mod.rs
src/azure/log_analytics/query/: execute.rs  execute_resource.rs  get.rs  get_resource.rs  mod.rs  types.rs
src/azure/sentinel/: mod.rs
src/azure/sentinel/incidents/: create_update.rs  delete.rs  get.rs  list.rs  list_alerts.rs  list_bookmarks.rs  list_entities.rs  mod.rs  run_playbook.rs  types.rs
src/client/: auth.rs  mod.rs
src/commands/: m365_auth.rs  mod.rs
src/defender/: advanced_hunting.rs  mod.rs
src/operations/: http.rs  mod.rs  run_query.rs
src/operations/defender/: hunting_query.rs  mod.rs
src/operations/sentinel/: mod.rs  sentinel_query.rs
src/types/: azure.rs
src/types/azure/: log_analytics.rs  mod.rs  resource_manager.rs  sentinel.rs
