[package]
name = "panopticon-m365"
version = "0.1.0"
edition = "2024"

[dependencies]
panopticon-core = "0.2.0"
uuid = { version = "1.20", features = ["serde", "v8", "v4"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oauth2 = { version = "5", features = ["reqwest"] }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
] }
